# reviewq

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json
.claude/skills/reviewq-e2e/: SKILL.md
src/: auth.rs  cli.rs  config.rs  daemon.rs  db.rs  detector.rs  error.rs  executor.rs  github.rs  idempotency.rs  lib.rs  logging.rs  main.rs  review_html.rs  rules.rs  traits.rs  types.rs  update.rs  worktree.rs
src/prompts/: default_review.md
src/runner/: cancel.rs  mod.rs  process.rs
src/tui/: app.rs  mod.rs  prompt_view.rs  queue_view.rs  review_view.rs  tail_view.rs  widgets.rs
tests/: integration.rs
